--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,6 +8,7 @@
   <meta name="game-engine-origin" content="http://www.isogenicengine.com">
   <meta http-equiv="X-UA-Compatible" content="IE=9" >
   <title>NetMatch - The Web (deployed)</title>
+  <link href="style.css" rel="stylesheet">
   <script type="text/javascript">var igeRoot = './';</script>
 </head>
 <body>
